--- a/app/src/index.html
+++ b/app/src/index.html
@@ -163,13 +163,13 @@
                 </div>
                 <div flex="25" style="background-color: #c46363;">
                     <div layout="row" style="height: 100%;">
-                        <div flex="20">
+                        <div flex="100" flex-gt-sm="20">
                             <div layout="row" layout-align="center center" style="font-size: small">
                                 <p>© 2017 Copyright | infosec</p>
                             </div>
                         </div>
-                        <div flex></div>
-                        <div flex="20"></div>
+                        <div flex hide show-gt-sm></div>
+                        <div flex="20" hide show-gt-sm></div>
                     </div>
                 </div>
             </div>
