Sağ üst sosyal medya iconları bölümü tamamlandı.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -31,24 +31,43 @@
                 <div layout="row" flex="20" flex-sm="30" hide-xs style="height: 100%;" >
                     <div flex="none" style="width: 7px; height: 100%;"></div>
                     <div flex layout="column" layout-align="center" class="padded" md-whiteframe="1" style="height: 100%; ">
-                        <div flex="20" layout="row" layout-align="center" style="height: 100%; color: white; padding: 2px;"><h3>Follow Us</h3></div>
+                        <div flex="20" layout="row" layout-align="center" style="height: 100%; color: white; padding: 2px; text-shadow: 2px 2px #686868;"><h3>Follow Us</h3></div>
                         <div flex="60" layout="column" layout-align="center" style="height: 100%;">
                             <div flex="65" layout="column" style="height: 100%;">
                                 <div layout="row" layout-align="center center" style="height: 100%;">
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/facebook.png" alt="facebook"></div>
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/twitter.png" alt="twitter"></div>
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/gplus.png" alt="gplus"></div>
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/youtube.png" alt="youtube"></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/facebook.png" alt="facebook"></a></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/twitter.png" alt="twitter"></a></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/gplus.png" alt="gplus"></a></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/youtube.png" alt="youtube"></a></div>
                                 </div>
                                 <div layout="row" layout-align="center center" style="height: 100%;">
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/facebook.png" alt="facebook"></div>
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/twitter.png" alt="twitter"></div>
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/gplus.png" alt="gplus"></div>
-                                    <div style="height: 32px; width: 32px; padding: 2px;"><img src="img/youtube.png" alt="youtube"></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/linkedin.png" alt="linkedin"></a></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/pinterest.png" alt="pinterest"></a></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/github.png" alt="github"></a></div>
+                                    <div style="height: 32px; width: 32px; padding: 3px;"><a href="#"><img class="md-whiteframe-2dp" src="img/dropbox.png" alt="dropbox"></a></div>
                                 </div>
                             </div>
                         </div>
-                        <div flex="20" style="background-color: #b8cc24;"></div>
+                        <div flex="20" layout="row">
+                            <div flex="none" layout="row" class="md-whiteframe-2dp" layout-align="center center" style="margin-right: 2px; background-color: #ccc67a; color:#313131; font-size: 12px; padding: 2px;"><span>Giriş Yap</span></div>
+                            <div flex layout="row" style="background-color: #9E9E9E;">
+                                <div flex layout="row" layout-align="center none" style="padding: 1px;">
+                                    <md-button class="md-raised" layout="row" layout-align="center center" style="width: 100%; height: 100%; min-height: unset; min-width: unset; padding: 5px; margin:0;background-color: #fafafa;">
+                                        <img src="img/facebook.svg" alt="login facebook">
+                                    </md-button>
+                                </div>
+                                <div flex layout="row" layout-align="center none" style="padding: 1px;">
+                                    <md-button class="md-raised" layout="row" layout-align="center center" style="width: 100%; height: 100%; min-height: unset; min-width: unset; padding: 5px; margin:0; background-color: #fafafa;">
+                                        <img src="img/twitter.svg" alt="login twitter">
+                                    </md-button>
+                                </div>
+                                <div flex layout="row" layout-align="center none" style="padding: 1px;">
+                                    <md-button class="md-raised" layout="row" layout-align="center center" style="width: 100%; height: 100%; min-height: unset; min-width: unset; padding: 5px; margin:0; background-color: #fafafa;">
+                                        <img src="img/linkedin.svg" alt="login linkedin">
+                                    </md-button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
