--- a/app/src/index.html
+++ b/app/src/index.html
@@ -110,10 +110,12 @@
                             <div layout="row" style="height:100%;">
                                 <div id="plugin_wrapper" flex style="height: 100%;">
                                     <plugin type="plugins.left1" style="height: auto;">
-                                        <menu-item content="plugins.left1.main" ui-sref="home"></menu-item>
-                                        <menu-item content="plugins.left1.docs" ui-sref="article"></menu-item>
+                                        <menu-item content="plugins.left1.home" ui-sref="home"></menu-item>
+                                        <menu-item content="plugins.left1.article" ui-sref="article"></menu-item>
                                         <menu-item content="plugins.left1.news" ui-sref="news"></menu-item>
-                                        <menu-item content="plugins.left1.atolye"></menu-item>
+                                        <menu-item content="plugins.left1.toolbag" ui-sref="toolbag"></menu-item>
+                                        <menu-item content="plugins.left1.battlefield" ui-sref="battlefield"></menu-item>
+                                        <menu-item content="plugins.left1.itlaws" ui-sref="itlaws"></menu-item>
                                     </plugin>
                                     <plugin type="plugins.left2">
                                         <div ng-repeat="item in plugins.left2.items" style="height: 100%;" >
