Slider kısmının controller ve servis yapısı tamamlandı.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body ng-app="myApp" style="background-color: #9E9E9E;">
+<body ng-app="myApp" ng-strict-di style="background-color: #9E9E9E;">
     <div id="header" layout="row" layout-wrap layout-align="center">
         <div ng-controller="BannerController" id="header_content" flex-gt-md="85" flex="100">
             <div layout="row" layout-wrap style="height: 100%;">
@@ -210,6 +210,7 @@
     <script src="routes.min.js"></script>
     <script src="controllers.min.js"></script>
     <script src="directives.min.js"></script>
+    <script src="services.min.js"></script>
 
 </body>
 </html>
