xeditable, angular material ile çakışıyor. Editor material ile yapılacak.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/angular-material.min.css">
     <link rel="stylesheet" href="css/angular-carousel.min.css">
+    <link rel="stylesheet" href="css/xeditable.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -224,6 +225,7 @@
     <script src="js/angular-messages.min.js"></script>
     <script src="js/angular-touch.min.js"></script>
     <script src="js/angular-carousel.js"></script>
+    <script src="js/xeditable.min.js"></script>
 
     <script src="modules.min.js"></script>
     <script src="routes.min.js"></script>
