angular-sortable-view kütüphanesi eklendi ve admin sayfa ekleme paneli tamamlandı. Sadece kod düzgün hale getirilecek.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -225,7 +225,7 @@
     <script src="js/angular-messages.min.js"></script>
     <script src="js/angular-touch.min.js"></script>
     <script src="js/angular-carousel.js"></script>
-    <script src="js/xeditable.min.js"></script>
+    <script src="js/angular-sortable-view.min.js"></script>
 
     <script src="modules.min.js"></script>
     <script src="routes.min.js"></script>
